# fastapi-book

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/fake/: creature.py  explorer.py
src/service/: creature.py  explorer.py
src/test/unit/service/: test_creature.py
src/web/: creature.py  explorer.py
