[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "fastapi-book"
version = "1"
description = ""
authors = [{ name = "Valérie" }]
readme = "README.md"
requires-python = ">=3.12"
dynamic = [ "dependencies" ]

[tool.black]
line-length = 100

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.120.1"
uvicorn = "*"
poetry-core = ">=1.0.0"
